# ERA

./: BIBLE.md  CHANGELOG.md  GOVERNANCE.md  HANDOVER.md  INDEX.md  VISION.md
architecture/: README.md  execution-roadmap.md  system-map.md
creative-decisions/: CD-001-attachment-not-addiction.md  CD-002-grown-not-built.md  CD-003-recognition-beneath-memory.md  CD-004-meaning-split-from-recognition.md  CD-005-relational-axiom.md  CD-006-simulate-intention-not-movement.md  CD-007-core-language-rust.md  CD-008-plate-world.md  README.md
design/: asset-design-model.md  generative-world-system.md  town-composition.md
development/: DEV-000-development-constitution.md  DS-001-first-breath.md  DS-002-living-world.md  DS-003-sprint-1-report.md  DS-004-sprint-2.md  DS-005-sprint-3-density.md  DS-006-live-engine.md  DS-007-behaviour-layer.md  DS-008-social-realism.md  README.md
development/district/: Cargo.toml  README.md  index.html
development/district/.cargo/: config.toml
development/district/src/: main.rs
development/sprint-1/: Cargo.toml  README.md  run_phase1.py
development/sprint-1/examples/: dump_replay.rs  dump_world.rs
development/sprint-1/src/: lib.rs  main.rs  web.rs
development/sprint-1/src/behaviour/: mod.rs
development/sprint-1/src/engine/: mod.rs  snapshot_json.rs
development/sprint-1/src/sim/: ambient.rs  cast.rs  clock.rs  dog.rs  festival.rs  intention.rs  matchday.rs  mod.rs  oak.rs  possessions.rs  resident.rs  rng.rs  routine.rs  simulation.rs  social.rs  weather.rs  wildlife.rs
development/sprint-1/src/view/: layout.rs  mod.rs
development/sprint-1/src/world/: location.rs  mod.rs  navigation.rs  poi.rs
development/sprint-1/tests/: behaviour.rs  companionship.rs  density.rs  disposition.rs  dog.rs  engine.rs  generative.rs  intention.rs  matchday.rs  oak.rs  places.rs  poi.rs  routine.rs  social.rs  social_memory.rs  test_world.py  wildlife.rs  world.rs
development/sprint-1/viewer/: README.md  build.sh  era-first-breath-viewer.html  viewer.template.html
development/sprint-1/world/: __init__.py  locations.py  navigation.py  world.py
intake/: IP-001-worldview-foundation.md  IP-002-human-attachment.md  IP-003-systems-architecture-foundation.md
living-world/: README.md  interwoven-lives.md  places.md  residents.md  the-quiet-mysteries.md
research/: town-engine-technical-strategy.md  visual-engine-and-design-strategy.md
sources/: README.md  book-of-era-edition-I-v1.2.docx  book-of-era-edition-I-v1.2.txt  design-bible-v0.1.txt  era-the-beginning-for-gamma.docx  era-the-beginning-for-gamma.txt  proposal-chatgpt-chat.txt
tools/: audit_dog.mjs  audit_onpath.mjs  audit_paths.mjs  audit_routes.mjs  bible_to_world.py  build_mapper.py  bundle_compositor.py  capture.sh  capture_debug.sh  check_visible.mjs  compositor_shot.js  dog_approach.mjs  dump_route.mjs  gif_frames.mjs  make_occluder.py  offpath.mjs  path-tracer.html  plate-mapper-template.html  plate-mapper.html  plate_map_firstpass.py  regen_replay.sh  render_compositor.mjs  render_debug.mjs  render_dogwalk.mjs  render_gaps.mjs  render_hops.mjs  render_map.py  render_obs.mjs  render_plate.mjs  render_plate3d.mjs  render_sprite.mjs  (+7 more)
(+65 files in other folders)
